# typo-generator

./: Cargo.toml  README.md
src/: main.rs  troll.rs
