[package]
name = "trololo"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",   
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",               
    "Win32_System_Threading",     
    "Win32_System_LibraryLoader",       
    "Win32_System_Registry",         
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",   
]}
rand = "0.8"
